--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Haraka Plugin for outbound rate limits",
   "main": "index.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint *.js",
+    "lint": "npx eslint *.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,10 +24,10 @@
   "homepage": "https://github.com/haraka/haraka-plugin-outbound-rate-limit#readme",
   "dependencies": {
     "haraka-constants": "*",
-    "redis": "^2.6.1"
+    "redis": "^2.7.1"
   },
   "devDependencies": {
-    "eslint": ">=3",
+    "eslint": ">=8",
     "eslint-plugin-haraka": "*"
   }
 }
