--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "npx eslint *.js",
+    "lintfix": "npx eslint --fix *.js",
     "test": "echo \"Error: no test specified\""
   },
   "repository": {
