--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Haraka Plugin for outbound rate limits",
   "main": "index.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint *.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "npx eslint *.js",
+    "lintfix": "npx eslint --fix *.js",
+    "test": "echo \"Error: no test specified\""
   },
   "repository": {
     "type": "git",
@@ -24,10 +25,10 @@
   "homepage": "https://github.com/haraka/haraka-plugin-outbound-rate-limit#readme",
   "dependencies": {
     "haraka-constants": "*",
-    "redis": "^2.6.1"
+    "redis": "^3.1.2"
   },
   "devDependencies": {
-    "eslint": ">=3",
+    "eslint": ">=8",
     "eslint-plugin-haraka": "*"
   }
 }
